--- a/resources/sass/frontend/app.scss
+++ b/resources/sass/frontend/app.scss
@@ -33,20 +33,61 @@
 }
 
 
+
+.constituency-wise-header {
+    color: white;
+
+    h2 {
+        text-align: center;
+        font-family: "Oswald-Light";
+        color: #ffde00;
+        font-size: 35px;
+    }
+
+    h1 {
+        text-align: center;
+        font-family: "Oswald-Light";
+        font-size: 45px;
+    }
+
+    .constituency-info {
+        text-align: center;
+        font-family: "Oswald-Light";
+        color: #000;
+        font-size: 23px;
+        background-color: #ffde00;
+        display: inline-block;
+        border-radius: 10px;
+        padding-left: 10px;
+        padding-right: 10px;
+        margin-bottom: 0;
+    }
+}
+
 .constituency-chart-container {
-    width: 1600px;
-    height: 900px;
+    width: 1280px;
+    height: 720px;
     position: relative;
     border: 1px solid white;
-    margin-top: 20px;
+    margin-top: 10px;
 }
 
 .constituency-chart-corner-img {
     position: absolute;
-    width: 80px;
-    left: 20px;
-    top: 20px;
+    width: 60px;
+    left: 10px;
+    top: 10px;
 }
+
+.constituency-chart-corner-img-right {
+    position: absolute;
+    width: 60px;
+    right: 10px;
+    bottom: 10px;
+    transform: rotate(180deg);
+}
+
+
 
 .constituency-chart-main-container {
     color: white;
@@ -56,9 +97,10 @@
     transform: translate(-50%, -50%);
     width: 100%;
     margin: 0 auto; // Center horizontally
-    max-width: 1600px; // Set maximum width
-    max-height: 900px; // Set maximum height
+    max-width: 1280px; // Set maximum width
+    max-height: 720px; // Set maximum height
 }
+
 
 .constituency-chart-content {
     color: white;
@@ -68,8 +110,10 @@
     transform: translate(-50%, -50%);
     width: 100%;
     box-sizing: border-box;
-    padding: 20px;
+    padding: 10px;
 }
+
+
 
 .constituency-chart-flex-container {
     display: flex;
@@ -78,42 +122,42 @@
 
 .constituency-chart-frame-container {
     display: flex;
-    width: 650px;
-    margin-right: 20px;
+    width: 500px;
+    margin-right: 0px;
     // background: red
 }
 
 .constituency-chart-frame {
-    border-radius: 50px; // Adjust the border radius as needed
-    min-height: 300px; // Adjust the minimum height as needed
-    width: 600px; // Adjust the minimum width as needed
+    border-radius: 30px; // Adjust the border radius as needed
+    min-height: 400px; // Adjust the minimum height as needed
+    width: 500px; // Adjust the minimum width as needed
     // overflow: "hidden", // To hide content that exceeds the border radius
-    max-height: 450px;
+    max-height: 400px;
     background: rgba(255, 255, 255, 0.2);
-    margin-left: 20px;
-    padding: 10px 30px;
+    margin-left: 10px;
+    padding: 15px 20px;
 }
 
 .constituency-chart-chart-grid-1 {
-    width: 450px;
+    // width: 200px;
 }
 
 .constituency-chart-chart-grid-2 {
-    margin-right: 50px;
+    // margin-right: 50px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: flex-end; // Align to the bottom
     width: 300px;
-    height: 450px;
-    padding-left: 100px;
+    // height: 350px;
+    padding-left: 20px;
 }
 
 
 .party_name {
     // Styles for the party name
-    margin-top: 5px;
-    font-size: 20px;
+    margin-top: 7px;
+    font-size: 18px;
     font-family: "Oswald-Regular"; // Replace "YourFontFamily" with the actual font you want to use
     text-transform: uppercase; // Convert text to uppercase
     // Add other styling properties as needed
@@ -127,15 +171,15 @@
     align-items: center;
     img {
 
-        width: 60px;
-        height: 60px;
+        width: 70px;
+        height: 70px;
         border-radius: 50%;
         object-fit: cover;
     }
 }
 
 .votes-container{
-    margin-top: 20px;
+    margin-top: 10px;
     .vote-row {
 
             display: flex;
@@ -145,7 +189,7 @@
             .vote-label {
                 text-align: left;
                 font-family: "Oswald-Regular";
-                font-size: 18px;
+                font-size: 15px;
 
                 &.grand-total {
                     font-family: "Oswald-SemiBold";
@@ -155,7 +199,7 @@
             .vote-value {
                 text-align: right;
                 font-family: "Oswald-Regular";
-                font-size: 18px;
+                font-size: 15px;
 
                 // Style for the grand total row
                 &.grand-total{
@@ -165,17 +209,13 @@
         }
 }
 
-
 .candidate_img {
-
     // Styles for the candidate image container
     img {
         max-width: 100%;
         width: auto; // Make the image take 100% of the width of the container
-        height: 200px; // Maintain the aspect ratio
+        height: 180px; // Maintain the aspect ratio
         border-radius: 50%; // Make the image circular
         // Add other styling properties as needed
     }
 }
-
-
