--- a/resources/sass/frontend/app.scss
+++ b/resources/sass/frontend/app.scss
@@ -32,6 +32,11 @@
     font-weight: "normal";
 }
 
+@font-face {
+    src: url("../../fonts/wangdi_29.woff2") format('woff2');
+    font-family: "Wangdi29-Regular";
+    font-weight: 300;
+}
 
 
 .constituency-wise-header {
@@ -153,10 +158,9 @@
     padding-left: 20px;
 }
 
-
 .party_name {
     // Styles for the party name
-    margin-top: 7px;
+    margin-top: 5px;
     font-size: 18px;
     font-family: "Oswald-Regular"; // Replace "YourFontFamily" with the actual font you want to use
     text-transform: uppercase; // Convert text to uppercase
@@ -164,24 +168,25 @@
 }
 
 .party_logo {
-
     overflow: hidden;
     display: flex;
     justify-content: center;
     align-items: center;
     img {
-
-        width: 70px;
-        height: 70px;
+        width: 60px;
+        height: 60px;
         border-radius: 50%;
         object-fit: cover;
     }
 }
 
-.votes-container{
-    margin-top: 10px;
-    .vote-row {
+.candidate-name{
+    font-family: "Oswald-Regular";
+}
 
+.votes-container{
+    margin-top: 5px;
+    .vote-row {
             display: flex;
             justify-content: space-between;
             color: 'white';
@@ -218,4 +223,208 @@
         border-radius: 50%; // Make the image circular
         // Add other styling properties as needed
     }
+}
+
+
+.dz{
+    .constituency-wise-header {
+            color: white;
+
+            h2 {
+                text-align: center;
+                font-family: "Wangdi29-Regular";
+                color: #ffde00;
+                font-size: 60px;
+                max-height: 60px;
+                margin-top:-10px;
+            }
+
+            h1 {
+                text-align: center;
+                font-family: "Wangdi29-Regular";
+                font-size: 80px;
+                max-height: 60px;
+                margin-top: -10px;
+            }
+
+            .constituency-info {
+                text-align: center;
+                font-family: "Wangdi29-Regular";
+                color: #000;
+                font-size: 60px;
+                max-height: 70px;
+                background-color: #ffde00;
+                display: inline-block;
+                border-radius: 10px;
+                padding-left: 50px;
+                padding-right: 50px;
+                padding-bottom: 5px;
+                // margin-bottom: 10;
+            }
+        }
+
+        .constituency-chart-container {
+            width: 1280px;
+            height: 720px;
+            position: relative;
+            border: 1px solid white;
+            margin-top: 10px;
+        }
+
+        .constituency-chart-corner-img {
+            position: absolute;
+            width: 60px;
+            left: 10px;
+            top: 10px;
+        }
+
+        .constituency-chart-corner-img-right {
+            position: absolute;
+            width: 60px;
+            right: 10px;
+            bottom: 10px;
+            transform: rotate(180deg);
+        }
+
+
+
+        .constituency-chart-main-container {
+            color: white;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 100%;
+            margin: 0 auto; // Center horizontally
+            max-width: 1280px; // Set maximum width
+            max-height: 720px; // Set maximum height
+        }
+
+
+        .constituency-chart-content {
+            color: white;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 100%;
+            box-sizing: border-box;
+            padding: 10px;
+            font-family: 'Wangdi29-Regular'
+        }
+
+
+
+        .constituency-chart-flex-container {
+            display: flex;
+            justify-content: space-between;
+        }
+
+        .constituency-chart-frame-container {
+            display: flex;
+            width: 500px;
+            margin-right: 0px;
+            // background: red
+        }
+
+        .constituency-chart-frame {
+            border-radius: 30px; // Adjust the border radius as needed
+            min-height: 400px; // Adjust the minimum height as needed
+            width: 500px; // Adjust the minimum width as needed
+            // overflow: "hidden", // To hide content that exceeds the border radius
+            max-height: 400px;
+            background: rgba(255, 255, 255, 0.2);
+            margin-left: 10px;
+            padding: 15px 20px;
+        }
+
+        .constituency-chart-chart-grid-1 {
+            // width: 200px;
+        }
+
+        .constituency-chart-chart-grid-2 {
+            // margin-right: 50px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: flex-end; // Align to the bottom
+            width: 300px;
+            // height: 350px;
+            padding-left: 20px;
+        }
+
+        .party_name {
+            // Styles for the party name
+            margin-top: -5px;
+            font-size: 50px;
+            max-height: 50px;
+            font-family: "Wangdi29-Regular"; // Replace "YourFontFamily" with the actual font you want to use
+            // text-transform: uppercase; // Convert text to uppercase
+            // Add other styling properties as needed
+        }
+
+        .party_logo {
+            overflow: hidden;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+            img {
+                width: 80px;
+                height: 80px;
+                border-radius: 50%;
+                object-fit: cover;
+            }
+        }
+
+        .candidate-name {
+            font-family: "Wangdi29-Regular";
+            font-size: 35px;
+            height: 35px;
+        }
+
+        .votes-container {
+            margin-top: -10px;
+
+            .vote-row {
+                display: flex;
+                justify-content: space-between;
+                color: 'white';
+
+                .vote-label {
+                    text-align: left;
+                    font-family: "Wangdi29-Regular";
+                    font-size: 35px;
+                    max-height: 35px;
+
+                    &.grand-total {
+                        font-family: "Wangdi29-Regular";
+                    }
+
+                }
+
+                .vote-value {
+                    text-align: right;
+                    font-family: "Wangdi29-Regular";
+                    font-size: 35px;
+                    max-height: 35px;
+                    // Style for the grand total row
+                    &.grand-total {
+                        font-family: "Wangdi29-Regular";
+                    }
+                }
+            }
+        }
+
+        .candidate_img {
+
+            // Styles for the candidate image container
+            img {
+                max-width: 100%;
+                width: auto; // Make the image take 100% of the width of the container
+                height: 100px; // Maintain the aspect ratio
+                border-radius: 50%; // Make the image circular
+                // Add other styling properties as needed
+            }
+        }
 }
