--- a/resources/sass/frontend/app.scss
+++ b/resources/sass/frontend/app.scss
@@ -344,10 +344,10 @@
 
         .constituency-chart-chart-grid-2 {
             // margin-right: 50px;
-            display: flex;
-            flex-direction: column;
+            display: block;
+            // flex-direction: column;
             align-items: center;
-            justify-content: flex-end; // Align to the bottom
+            // justify-content: flex-end; // Align to the bottom
             width: 300px;
             // height: 350px;
             padding-left: 20px;
@@ -426,5 +426,30 @@
                 border-radius: 50%; // Make the image circular
                 // Add other styling properties as needed
             }
+        }
+        .result-container{
+            position:absolute;
+            right: 50px;
+            top: 350px;
+            font-family: 'Wangdi29-Regular';
+            font-size: 35px;
+
+            .partylogo {
+                    overflow: hidden;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+
+                    img {
+                        width: 50px;
+                        height: 50px;
+                        border-radius: 50%;
+                        object-fit: cover;
+                    }
+                }
+        }
+
+        .overall-result-container{
+            background-color: white;
         }
 }
