--- a/resources/sass/frontend/app.scss
+++ b/resources/sass/frontend/app.scss
@@ -33,7 +33,7 @@
 }
 
 @font-face {
-    src: url("../../fonts/wangdi_29.woff2") format('woff2');
+    src: url("../../fonts/wangdi29.ttf") format('woff2');
     font-family: "Wangdi29-Regular";
     font-weight: 300;
 }
