--- a/resources/sass/frontend/app.scss
+++ b/resources/sass/frontend/app.scss
@@ -234,32 +234,37 @@
                 text-align: center;
                 font-family: "Wangdi29-Regular";
                 color: #ffde00;
-                font-size: 60px;
-                max-height: 60px;
-                margin-top:-10px;
+                font-size: 50px;
+                max-height: 50px;
+                margin-top:-45px;
             }
 
             h1 {
                 text-align: center;
                 font-family: "Wangdi29-Regular";
-                font-size: 80px;
-                max-height: 60px;
-                margin-top: -10px;
+                font-size: 60px;
+                max-height: 50px;
+                margin-top: -20px;
             }
 
             .constituency-info {
                 text-align: center;
-                font-family: "Wangdi29-Regular";
-                color: #000;
-                font-size: 60px;
-                max-height: 70px;
                 background-color: #ffde00;
                 display: inline-block;
-                border-radius: 10px;
+                border-radius: 50px;
                 padding-left: 50px;
                 padding-right: 50px;
                 padding-bottom: 5px;
-                // margin-bottom: 10;
+                max-height: 50px;
+
+                div {
+                    font-family: "Wangdi29-Regular";
+                    color: #000;
+                    font-size: 50px;
+                    max-height: 50px;
+                    margin-top: -10px;
+                }
+                margin-bottom: 10;
             }
         }
 
@@ -298,6 +303,7 @@
             margin: 0 auto; // Center horizontally
             max-width: 1280px; // Set maximum width
             max-height: 720px; // Set maximum height
+
         }
 
 
@@ -322,17 +328,17 @@
 
         .constituency-chart-frame-container {
             display: flex;
-            width: 500px;
+            width: 700px;
             margin-right: 0px;
             // background: red
         }
 
         .constituency-chart-frame {
             border-radius: 30px; // Adjust the border radius as needed
-            min-height: 400px; // Adjust the minimum height as needed
-            width: 500px; // Adjust the minimum width as needed
+            min-height: 500px; // Adjust the minimum height as needed
+            width: 800px; // Adjust the minimum width as needed
             // overflow: "hidden", // To hide content that exceeds the border radius
-            max-height: 400px;
+            max-height: 500px;
             background: rgba(255, 255, 255, 0.2);
             margin-left: 10px;
             padding: 15px 20px;
@@ -340,6 +346,11 @@
 
         .constituency-chart-chart-grid-1 {
             // width: 200px;
+
+            .bar-chart-container{
+                width: 400px;
+                height: 300px;
+            }
         }
 
         .constituency-chart-chart-grid-2 {
@@ -349,15 +360,16 @@
             align-items: center;
             // justify-content: flex-end; // Align to the bottom
             width: 300px;
+            height: 300px;
             // height: 350px;
-            padding-left: 20px;
+            padding-left: 0px;
         }
 
         .party_name {
             // Styles for the party name
             margin-top: -5px;
-            font-size: 50px;
-            max-height: 50px;
+            font-size: 60px;
+            max-height: 60px;
             font-family: "Wangdi29-Regular"; // Replace "YourFontFamily" with the actual font you want to use
             // text-transform: uppercase; // Convert text to uppercase
             // Add other styling properties as needed
@@ -379,12 +391,14 @@
 
         .candidate-name {
             font-family: "Wangdi29-Regular";
-            font-size: 35px;
-            height: 35px;
+            font-size: 50px;
+            height: 50px;
+            margin-top: -10px;
+            // margin-bottom: 10px;
         }
 
         .votes-container {
-            margin-top: -10px;
+            margin-top: 2px;
 
             .vote-row {
                 display: flex;
@@ -394,23 +408,26 @@
                 .vote-label {
                     text-align: left;
                     font-family: "Wangdi29-Regular";
-                    font-size: 35px;
-                    max-height: 35px;
+                    font-size: 50px;
+                    max-height: 50px;
+                    margin-top: -10px;
 
                     &.grand-total {
                         font-family: "Wangdi29-Regular";
+                        // color:#ffde00;
                     }
-
                 }
 
                 .vote-value {
                     text-align: right;
                     font-family: "Wangdi29-Regular";
-                    font-size: 35px;
-                    max-height: 35px;
+                    font-size: 50px;
+                    max-height: 50px;
+                    margin-top: -20px;
                     // Style for the grand total row
                     &.grand-total {
                         font-family: "Wangdi29-Regular";
+                        // color: #ffde00;
                     }
                 }
             }
@@ -422,17 +439,39 @@
             img {
                 max-width: 100%;
                 width: auto; // Make the image take 100% of the width of the container
-                height: 100px; // Maintain the aspect ratio
+                height: 175px; // Maintain the aspect ratio
                 border-radius: 50%; // Make the image circular
                 // Add other styling properties as needed
             }
         }
         .result-container{
-            position:absolute;
-            right: 50px;
-            top: 350px;
-            font-family: 'Wangdi29-Regular';
-            font-size: 35px;
+            // position:absolute;
+            // right: 50px;
+            // top: 350px;
+            padding-left: 50px;
+
+
+            .party_labels {
+                font-size: 45px;
+                font-family: 'Wangdi29-Regular';
+                max-height: 45px;
+                // margin-top: -15px;
+            }
+
+            .party_labels_value{
+                font-size: 45px;
+                font-family: 'Wangdi29-Regular';
+                max-height: 45px;
+                margin-top: -10px;
+                min-width: 70px;
+            }
+
+            .total_label {
+                font-family: 'Wangdi29-Regular';
+                max-height: 55px;
+                font-size: 55px;
+                margin-top: -15px;
+            }
 
             .partylogo {
                     overflow: hidden;
@@ -441,8 +480,8 @@
                     align-items: center;
 
                     img {
-                        width: 50px;
-                        height: 50px;
+                        width: 60px;
+                        height: 60px;
                         border-radius: 50%;
                         object-fit: cover;
                     }
