--- a/resources/sass/frontend/app.scss
+++ b/resources/sass/frontend/app.scss
@@ -73,7 +73,7 @@
     width: 1280px;
     height: 720px;
     position: relative;
-    border: 1px solid white;
+    border: 1px solid rgba(255,255,255,0.15);
     margin-top: 10px;
 }
 
@@ -546,7 +546,7 @@
                 width: 1280px;
                 height: 720px;
                 position: relative;
-                border: 1px solid white;
+                border: 1px solid rgba(255, 255, 255, 0.15);
                 margin-top: 10px;
             }
 
