--- a/resources/sass/frontend/app.scss
+++ b/resources/sass/frontend/app.scss
@@ -74,7 +74,7 @@
     height: 720px;
     position: relative;
     border: 1px solid rgba(255,255,255,0.15);
-    margin-top: 10px;
+    // margin-top: 10px;
 }
 
 .constituency-chart-corner-img {
@@ -273,7 +273,7 @@
             height: 720px;
             position: relative;
             border: 1px solid white;
-            margin-top: 10px;
+            // margin-top: 10px;
         }
 
         .constituency-chart-corner-img {
@@ -547,7 +547,7 @@
                 height: 720px;
                 position: relative;
                 border: 1px solid rgba(255, 255, 255, 0.15);
-                margin-top: 10px;
+                // margin-top: 10px;
             }
 
             .constituency-chart-corner-img {
